--- a/src/main/resources/com/example/stkcontrol/Produto.fxml
+++ b/src/main/resources/com/example/stkcontrol/Produto.fxml
@@ -1,15 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.stkcontrol.Produto">
+<AnchorPane prefHeight="451.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.stkcontrol.Produto">
    <children>
-      <TextField fx:id="txtCodigo" layoutX="14.0" layoutY="54.0" promptText="Código" />
-      <Button fx:id="btnSearch" layoutX="202.0" layoutY="54.0" mnemonicParsing="false" onAction="#Search" text="Pesquisar" />
-      <TextField fx:id="txtDescricao" layoutX="14.0" layoutY="104.0" promptText="Descrição" />
+      <TextField fx:id="txtCodigo" layoutX="14.0" layoutY="115.0" promptText="Código" />
+      <Button fx:id="btnSubmit" layoutX="137.0" layoutY="394.0" mnemonicParsing="false" onAction="#Submit" prefHeight="25.0" prefWidth="149.0" text="Cadastrar" />
+      <TextField fx:id="txtDescricao" layoutX="14.0" layoutY="157.0" onInputMethodTextChanged="#checkLength" prefHeight="25.0" prefWidth="346.0" promptText="Descrição" />
+      <TextField fx:id="txtCusto" layoutX="14.0" layoutY="200.0" promptText="Preco Custo (R$)" />
+      <TextField fx:id="txtPreco" layoutX="14.0" layoutY="291.0" promptText="Preco de venda (R$)" />
+      <TextField fx:id="txtIpi" layoutX="14.0" layoutY="339.0" promptText="\% IPI" />
+      <TextField fx:id="txtUm" layoutX="211.0" layoutY="200.0" promptText="Unidade de Medida" />
+      <TextField fx:id="txtMultiplo" layoutX="211.0" layoutY="246.0" promptText="Múltiplo de Venda" />
+      <TextField fx:id="txtEndereco" layoutX="211.0" layoutY="291.0" promptText="Endereço Estoque" />
+      <TextField fx:id="txtFornecedor" layoutX="14.0" layoutY="246.0" promptText="Código Fornecedor" />
+      <Text layoutX="65.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: 900; -fx-font-size: 26;" text="Cadastro de Produto">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Text>
+      <TextField fx:id="txtQuantidade" layoutX="212.0" layoutY="339.0" promptText="Quantidade" />
    </children>
 </AnchorPane>
