--- a/src/main/resources/com/example/stkcontrol/Produto.fxml
+++ b/src/main/resources/com/example/stkcontrol/Produto.fxml
@@ -9,21 +9,21 @@
 
 <AnchorPane prefHeight="451.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.stkcontrol.Produto">
    <children>
-      <TextField fx:id="txtCodigo" layoutX="14.0" layoutY="115.0" promptText="Código" />
-      <Button fx:id="btnSubmit" layoutX="113.0" layoutY="393.0" mnemonicParsing="false" onAction="#Submit" prefHeight="25.0" prefWidth="149.0" text="Cadastrar" />
-      <TextField fx:id="txtDescricao" layoutX="14.0" layoutY="157.0" onInputMethodTextChanged="#checkLength" prefHeight="25.0" prefWidth="346.0" promptText="Descrição" />
-      <TextField fx:id="txtCusto" layoutX="14.0" layoutY="200.0" promptText="Preco Custo (R$)" />
-      <TextField fx:id="txtPreco" layoutX="14.0" layoutY="291.0" promptText="Preco de venda (R$)" />
-      <TextField fx:id="txtIpi" layoutX="14.0" layoutY="339.0" promptText="\% IPI" />
-      <TextField fx:id="txtUm" layoutX="211.0" layoutY="200.0" promptText="Unidade de Medida" />
-      <TextField fx:id="txtMultiplo" layoutX="211.0" layoutY="246.0" promptText="Múltiplo de Venda" />
-      <TextField fx:id="txtEndereco" layoutX="211.0" layoutY="291.0" promptText="Endereço Estoque" />
-      <TextField fx:id="txtFornecedor" layoutX="14.0" layoutY="246.0" promptText="Código Fornecedor" />
+      <Button fx:id="btnSubmit" layoutX="116.0" layoutY="412.0" mnemonicParsing="false" onAction="#Submit" prefHeight="25.0" prefWidth="149.0" text="Cadastrar" />
       <Text fill="#13e428" layoutX="65.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: 900; -fx-font-size: 26;" text="Cadastro de Produto">
          <font>
             <Font size="24.0" />
          </font>
       </Text>
-      <TextField fx:id="txtQuantidade" layoutX="212.0" layoutY="339.0" promptText="Quantidade" />
+      <TextField fx:id="txtCodigo" layoutX="63.0" layoutY="75.0" prefHeight="25.0" prefWidth="259.0" promptText="Código" />
+      <TextField fx:id="txtQuantidade" layoutX="61.0" layoutY="315.0" prefHeight="16.0" prefWidth="259.0" promptText="Quantidade" />
+      <TextField fx:id="txtIpi" layoutX="61.0" layoutY="381.0" prefHeight="25.0" prefWidth="259.0" promptText="\% IPI" />
+      <TextField fx:id="txtEndereco" layoutX="61.0" layoutY="350.0" prefHeight="25.0" prefWidth="259.0" promptText="Endereço Estoque" />
+      <TextField fx:id="txtDescricao" layoutX="63.0" layoutY="108.0" onInputMethodTextChanged="#checkLength" prefHeight="25.0" prefWidth="259.0" promptText="Descrição" />
+      <TextField fx:id="txtCusto" layoutX="64.0" layoutY="144.0" prefHeight="25.0" prefWidth="259.0" promptText="Preco Custo (R$)" />
+      <TextField fx:id="txtMultiplo" layoutX="62.0" layoutY="250.0" prefHeight="25.0" prefWidth="259.0" promptText="Múltiplo de Venda" />
+      <TextField fx:id="txtUm" layoutX="61.0" layoutY="281.0" prefHeight="25.0" prefWidth="259.0" promptText="Unidade de Medida" />
+      <TextField fx:id="txtPreco" layoutX="62.0" layoutY="213.0" prefHeight="25.0" prefWidth="259.0" promptText="Preco de venda (R$)" />
+      <TextField fx:id="txtFornecedor" layoutX="63.0" layoutY="179.0" prefHeight="25.0" prefWidth="259.0" promptText="Código Fornecedor" />
    </children>
 </AnchorPane>
