--- a/src/main/resources/com/example/stkcontrol/CadastroUsuario.fxml
+++ b/src/main/resources/com/example/stkcontrol/CadastroUsuario.fxml
@@ -7,40 +7,45 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="346.0" prefWidth="526.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.CadastroUsuarioController">
+<AnchorPane prefHeight="346.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.CadastroUsuarioController">
    <children>
-      <Pane layoutX="-38.0" prefHeight="383.0" prefWidth="569.0">
+      <Pane prefHeight="383.0" prefWidth="500.0">
          <children>
-            <TextField fx:id="txtUser" layoutX="162.0" layoutY="107.0" prefHeight="33.0" prefWidth="263.0" promptText="Usuário:">
+            <TextField fx:id="txtUser" layoutX="114.0" layoutY="103.0" prefHeight="33.0" prefWidth="263.0" promptText="Usuário:">
                <font>
                   <Font name="Arial" size="14.0" />
                </font>
             </TextField>
-            <TextField fx:id="txtSenha" layoutX="162.0" layoutY="192.0" prefHeight="33.0" prefWidth="263.0" promptText="Senha:">
+            <TextField fx:id="txtSenha" layoutX="113.0" layoutY="192.0" prefHeight="33.0" prefWidth="263.0" promptText="Senha:">
                <font>
                   <Font name="Arial" size="14.0" />
                </font>
             </TextField>
-            <Button layoutX="245.0" layoutY="262.0" mnemonicParsing="false" onAction="#handleCadastro" prefHeight="27.0" prefWidth="97.0" text="Cadastrar ">
+            <Button fx:id="btnCadastro" layoutX="196.0" layoutY="248.0" mnemonicParsing="false" onAction="#handleCadastro" prefHeight="27.0" prefWidth="97.0" text="Cadastrar ">
                <font>
                   <Font name="Arial Bold" size="15.0" />
                </font>
             </Button>
-            <Button layoutX="245.0" layoutY="305.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="26.0" prefWidth="97.0" text="Cancelar">
+            <Button fx:id="btnCancel" layoutX="196.0" layoutY="290.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="26.0" prefWidth="97.0" text="Cancelar">
                <font>
                   <Font name="Arial Bold" size="14.0" />
                </font>
             </Button>
-            <Text fill="#13b513" layoutX="139.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cadastro " wrappingWidth="479.853515625">
-               <font>
-                  <Font name="Arial Black" size="55.0" />
-               </font>
-            </Text>
-            <TextField fx:id="txtEmail" layoutX="162.0" layoutY="150.0" prefHeight="33.0" prefWidth="263.0" promptText="Email:">
+            <TextField fx:id="txtEmail" layoutX="113.0" layoutY="146.0" prefHeight="33.0" prefWidth="263.0" promptText="Email:">
                <font>
                   <Font name="Arial" size="14.0" />
                </font>
             </TextField>
+            <Button fx:id="btnLogin" layoutX="162.0" layoutY="289.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="27.0" prefWidth="166.0" text="Realizar Login" visible="false">
+               <font>
+                  <Font name="Arial Bold" size="15.0" />
+               </font>
+            </Button>
+            <Text layoutX="178.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: 800; -fx-font-size: 32;" text="Cadastro">
+               <font>
+                  <Font size="39.0" />
+               </font>
+            </Text>
          </children>
       </Pane>
    </children>
