--- a/src/main/resources/com/example/stkcontrol/Home.fxml
+++ b/src/main/resources/com/example/stkcontrol/Home.fxml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
-
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.HomeController">
    <children>
       <Button fx:id="btnEdit" layoutX="164.0" layoutY="545.0" mnemonicParsing="false" onAction="#handleEditar" prefHeight="26.0" prefWidth="100.0" text="Editar">
