--- a/src/main/resources/com/example/stkcontrol/Produto.fxml
+++ b/src/main/resources/com/example/stkcontrol/Produto.fxml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 <AnchorPane prefHeight="451.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.stkcontrol.ProdutoController">
    <children>
       <Button fx:id="btnSubmit" layoutX="97.0" layoutY="361.0" mnemonicParsing="false" onAction="#Submit" prefHeight="25.0" prefWidth="149.0" text="Cadastrar" />
