--- a/src/main/resources/com/example/stkcontrol/Home.fxml
+++ b/src/main/resources/com/example/stkcontrol/Home.fxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
+
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.HomeController">
    <children>
       <Button fx:id="btnEdit" layoutX="164.0" layoutY="545.0" mnemonicParsing="false" onAction="#handleEditar" prefHeight="26.0" prefWidth="100.0" text="Editar">
@@ -15,7 +16,7 @@
             <Font name="Arial" size="14.0" />
          </font>
       </Button>
-      <Text fill="#13dd0f" layoutX="14.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STKControl">
+      <Text fill="#13dd0f" layoutX="342.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STKControl">
          <font>
             <Font name="Arial Bold" size="39.0" />
          </font>
@@ -29,9 +30,12 @@
       <TableView fx:id="table" layoutX="50.0" layoutY="77.0" prefHeight="439.0" prefWidth="801.0">
         <columns>
           <TableColumn fx:id="codigo" prefWidth="100.0" text="Código" />
-            <TableColumn fx:id="descricao" prefWidth="104.0" text="Descricao" />
-            <TableColumn fx:id="quantidade" prefWidth="87.0" text="Quantidade" />
-          <TableColumn fx:id="endereco" prefWidth="99.0" text="Endereço" />
+            <TableColumn fx:id="descricao" prefWidth="142.0" text="Descricao" />
+            <TableColumn fx:id="quantidade" prefWidth="97.0" text="Quantidade" />
+            <TableColumn fx:id="unidMedida" prefWidth="84.0" text="Un. Medida" />
+            <TableColumn fx:id="fornecedor" prefWidth="131.0" text="Fornecedor" />
+          <TableColumn fx:id="endereco" prefWidth="129.0" text="Endereço Estoque" />
+            <TableColumn fx:id="movimento" prefWidth="117.0" text="Último Movimento" />
         </columns>
       </TableView>
       <Button layoutX="277.0" layoutY="546.0" mnemonicParsing="false" onAction="#handleRemover" prefHeight="26.0" prefWidth="100.0" text="Remover">
@@ -39,5 +43,7 @@
             <Font name="Arial" size="14.0" />
          </font>
       </Button>
+      <Button layoutX="814.0" layoutY="50.0" mnemonicParsing="false" onAction="#handleExit" text="Sair" />
+      <Button layoutX="49.0" layoutY="49.0" mnemonicParsing="false" onAction="#handleUpdate" text="Atualizar" />
    </children>
 </AnchorPane>
