--- a/src/main/resources/com/example/stkcontrol/Produto.fxml
+++ b/src/main/resources/com/example/stkcontrol/Produto.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<AnchorPane prefHeight="451.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.stkcontrol.ProdutoController">
+<AnchorPane prefHeight="451.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ProdutoController">
    <children>
       <Button fx:id="btnSubmit" layoutX="97.0" layoutY="361.0" mnemonicParsing="false" onAction="#Submit" prefHeight="25.0" prefWidth="149.0" text="Cadastrar" />
       <Text fill="#13e428" layoutX="65.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: 900; -fx-font-size: 26;" text="Cadastro de Produto">
