--- a/src/main/resources/com/example/stkcontrol/Home.fxml
+++ b/src/main/resources/com/example/stkcontrol/Home.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.HomeController">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.HomeController">
    <children>
       <Button fx:id="btnEdit" layoutX="164.0" layoutY="545.0" mnemonicParsing="false" onAction="#handleEditar" prefHeight="26.0" prefWidth="100.0" text="Editar">
          <font>
@@ -16,7 +17,7 @@
             <Font name="Arial" size="14.0" />
          </font>
       </Button>
-      <Text fill="#13dd0f" layoutX="342.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STKControl">
+      <Text fill="#13dd0f" layoutX="342.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STKcontrol">
          <font>
             <Font name="Arial Bold" size="39.0" />
          </font>
